--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -80,5 +80,11 @@
     <fragment
         android:id="@+id/settingFragment"
         android:name="com.steve.navigation.ui.SettingFragment"
-        android:label="SettingFragment" />
+        android:label="SettingFragment">
+        <action
+            android:id="@+id/action_settingFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/mainFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
